# dish-calculator

./: .gitignore  Cargo.toml  OVERVIEW.md  README.md  css.css  dishes.md  extra-einkauf.md  extrawünsche.md  flake.nix  full.md  ingredients.md  ingredientsfr.md  pest.grammar  plan.md  shopping-list.md
.helix/: languages.toml
src/: cli.rs  cookbook.rs  dish.rs  error.rs  excel_plan.rs  loaders.rs  main.rs  parser.rs  plan.rs  types.rs
src/test-data/: plan.md  table.md
testdata/: gk26.menu
tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/bindings/c/: tree-sitter-menu.pc.in
tree-sitter/bindings/c/tree_sitter/: tree-sitter-menu.h
tree-sitter/bindings/go/: binding.go  binding_test.go
tree-sitter/bindings/node/: binding.cc  index.js
tree-sitter/bindings/python/tests/: test_binding.py
tree-sitter/bindings/python/tree_sitter_menu/: __init__.py  binding.c
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/bindings/swift/TreeSitterMenuTests/: TreeSitterMenuTests.swift
tree-sitter/dish/: Cargo.toml  FORMAT_VARIATIONS.md  GRAMMAR_UPDATES.md  grammar.js  package.json
tree-sitter/dish/bindings/rust/: build.rs  lib.rs
tree-sitter/dish/src/: grammar.json  node-types.json  parser.c
tree-sitter/dish/test/corpus/: armer_ritter.md  auberginen.md  bohnen.md  bohneneintopf.md  brokkoli.md  brownies.md  chili_sin_cane.md  curry.md  gebratene_maultaschen.md  gnocci_vegan.md  hotdogs.md  kaesespaetzle.md  kaiserschmarn.md  linsendahl.md  mie_nudeln.md  mousse.md  obst_kekse.md  obstsalat.md  paprika.md  schupfnudeln.md  semmelknoedel.md  simple.md  simple2.md  spinatrisotto.md  standartfruehstueck.md  tagliatelle.md  vegi_bolognese.md  wraps.md
tree-sitter/queries/: highlights.scm
tree-sitter/src/: grammar.json  node-types.json  parser.c
tree-sitter/test/corpus/: advanced.txt  auberginen.md  basic.txt  brokkoli.md  gk26.txt
