[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
thiserror = "*"
chrono = "0.4.39"
clap = { version="4.5.37", features = ["derive"]}
markdown = "1.0.0"
markdown2pdf = "*"
tokio = { version="*", features = ["fs", "macros", "rt-multi-thread"]}
futures = "*"
tree-sitter = "0.25"
tree-sitter-menu = { path = "./tree-sitter" }
regex = "1"
