[package]
name = "tree-sitter-dish"
description = "Dish grammar for tree-sitter"
version = "0.1.0"
authors = ["Sebastian Klähn <info@sebastian-klaehn.de>"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "dish"]
categories = ["parser-implementations", "parsing"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
